5.19 MatrixRotation - Add textbook sol