@@ -3,6 +3,7 @@ import epi.test_framework.EpiTest;
 import epi.test_framework.GenericTest;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -11,7 +12,7 @@ public class MatrixRotation {
 
   public static void rotateMatrix(List<List<Integer>> squareMatrix) {
     // Initial Attempt - Brute force
-    List<List<Integer>> res = new ArrayList<>();
+/*     List<List<Integer>> res = new ArrayList<>();
 
     for (int i = 0; i < squareMatrix.size(); i++) {
       res.add(new ArrayList<>());
@@ -22,9 +23,26 @@ public class MatrixRotation {
 
     for (int i = 0; i < squareMatrix.size(); i++) {
         squareMatrix.set(i, res.get(i));
+    } */
+
+    // Textbook Sol - Same O(N^2) time but O(1) space
+    int N = squareMatrix.size();
+    for (int i = 0; i < N/2; i++) {                            // No. of layers
+      for (int j = i; j < (N - i - 1); j++) {                  // 1 iteration = 4 elts displaced
+        int tmp1 = squareMatrix.get(i).get(j);
+        int tmp2 = squareMatrix.get(j).get(N - 1 - i);
+        int tmp3 = squareMatrix.get(N - 1 - i).get(N - 1 - j);
+        int tmp4 = squareMatrix.get(N - 1 - j).get(i);
+
+        squareMatrix.get(j).set(N - 1 - i, tmp1);
+        squareMatrix.get(N - 1 - i).set(N - 1 - j, tmp2);
+        squareMatrix.get(N - 1 - j).set(i, tmp3);
+        squareMatrix.get(i).set(j, tmp4);
+      }
     }
     return;
   }
+  
   @EpiTest(testDataFile = "matrix_rotation.tsv")
   public static List<List<Integer>>
   rotateMatrixWrapper(List<List<Integer>> squareMatrix) {
@@ -33,10 +51,11 @@ public class MatrixRotation {
   }
 
   public static void main(String[] args) {
-/*     List<List<Integer>> in1 = List.of(List.of(1, 2, 3, 4), 
-                                      List.of(5, 6, 7, 8), 
-                                      List.of(9, 10, 11, 12), 
-                                      List.of(13, 14, 15, 16));
+/*     List<List<Integer>> in1 = new ArrayList<>(Arrays.asList(
+                                new ArrayList<>(Arrays.asList(1, 2, 3, 4)), 
+                                new ArrayList<>(Arrays.asList(5, 6, 7, 8)), 
+                                new ArrayList<>(Arrays.asList(9, 10, 11, 12)), 
+                                new ArrayList<>(Arrays.asList(13, 14, 15, 16))));
     rotateMatrix(in1);
     System.out.println(in1); */
     System.exit(
